<resources>
    <string name="app_name">co-work-android-user</string>
    <string name="facebook_app_id">207669949811265</string>
    <string name="fb_login_protocol_scheme">fb1768282206580252</string>
    <string name="submit_btn">Log in</string>
    <string name="submit_forgot_email">Send</string>
    <string name="submit_forgot_finish">Back to Login</string>
    <string name="text_forgot_title_finish">Thanks :)</string>
    <string name="text_forgot_Sub_finish">Please follow the link in the email</string>
    <string name="text_forgot_Sub_finish_Sub">to reset your password</string>
    <string name="btn_register_title">Create Account</string>
    <string name="btn_register">Register</string>
    <string name="submit_btn_with_facebook">Log in with facebook</string>
    <string name="text_forgot_title">Reset password</string>
    <string name="text_forgot_Sub">Well send you an email with a reset link</string>
    <string name="email_format_invalid">invalid email format</string>
    <string name="name_empty_message">Name should not empty</string>
    <string name="email_empty_massage">E-mail should not empty</string>
    <string name="password_empty_massage">Password should not empty</string>
    <string name="re_password_empty_massage">Re-password should not empty</string>
    <string name="invalid_re_password">Invalid Re-password</string>
    <string name="name_longer_that_default">Name should not longer that 60 words</string>
    <string name="password_longer_that_defaul">Password should not longer than 30 words</string>
    <string name="password_shorter_that_defaul">Password should not shorter than words</string>
    <string name="register_header">Register</string>
    <string name="login_header">Login</string>
    <string name="forgot_header">Forgot Password</string>
    <string name="upload_image_profile">Upload Image Profile</string>
    <string name="e_mail">E-mail address</string>
    <string name="name">You name</string>
    <string name="re_password">Re-Password</string>
    <string name="password">Password</string>
    <string name="message">Loading......</string>
    <string name="load_register">Register</string>
    <string name="rating">Rating</string>
    <string name="reserve_seat">Reserve Seat</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detail_co_work">Map</string>
    <string name="co_working_nearby_you">Co-working</string>
    <string name="chiang_mai_thailand">Chiang Mai, Thailand</string>
    <string name="logout">Logout</string>
    <string name="aboutus">AboutUs</string>
    <string name="change_password">Change Password</string>
    <string name="toastResponseLogin">Do not have this email in system</string>
    <string name="toastResponseForgot">This email do not sing up</string>
    <string name="payment_history">Payment History</string>
    <string name="profile">Profile</string>
    <string name="statusFalseConfirmSingUp">PleaseConfirmEmail</string>
    <string name="dialog">Login</string>
    <string name="dialog_button">ok</string>
    <string name="msg_dialog_login">You Login App?</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="price">Price</string>
    <string name="baht">Baht</string>
    <string name="from_you_current_location">From your current location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="allow_open_current_location">Allow Open Current location</string>
    <string name="hi_worker">Hi! Worker</string>
    <string name="welcome_back_to_co_working_community">Welcome back to co-working community</string>
    <string name="topic_email">EMAIL</string>
    <string name="topic_password">PASSWORD</string>
    <string name="topic_re_password">RE-PASSWORD</string>
    <string name="topic_name">NAME</string>
    <string name="text_reserve">This seat is ideal for athletes who enjoy a lower position inside the kayak.</string>
    <string name="reserve">Reserve</string>
    <string name="poolsub_the_pool_of_doers">POOLSUB - the Pool of Doers</string>
    <string name="reserve_name">RESERVE NAME</string>

</resources>
