<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.msigl62.coworkandroiduset.ui.forgot.ForgotActivity">

    <include layout="@layout/layout_toolbar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textTitle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBarThem"
        android:text="@string/text_forgot_title_finish"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        tools:ignore="SpUsage,UnknownIdInLayout" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_forgot_Sub_finish" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSub"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_forgot_Sub_finish_Sub" />

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/back_login" />

</RelativeLayout>