<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.msigl62.coworkandroiduset.ui.forgot.ForgotActivity">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/textTitle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/toolBarThem"
        android:text="@string/text_forgot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_title"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/text_forgot_Sub"
        android:layout_below="@+id/textTitle"
        android:id="@+id/textSub"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSub"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="EMAIL"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edt_forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnSubmitForgot"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/submit_forgot" />

</RelativeLayout>
