<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <include layout="@layout/layout_toolbar_filter" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBarFilterLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        tools:ignore="UnknownIdInLayout" />

    <RelativeLayout
        android:id="@+id/layoutPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/priceOne"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:background="@color/bb_inActiveBottomBarItemColor"
            android:inputType="number" />

        <View
            android:layout_width="12dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@color/cardview_shadow_start_color" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/priceTwo"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="@color/bb_inActiveBottomBarItemColor"
            android:inputType="number" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textFromYour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/from_you_current_location" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAllowOpen"
        android:layout_width="168dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textFromYour"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_states"
        android:text="@string/allow_open_current_location"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatSeekBar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btnAllowOpen"
        android:layout_centerHorizontal="true" />


</RelativeLayout>